--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input {
+  margin: 5px;
+  padding: 5px;
+}
+
+span.link {
+  cursor: pointer;
+  font-weight: bold;
+}
